--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "interactive-pricing-component",
+  "homepage": "https://celigx.github.io/interactive-pricing-component",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
